<resources>
    <string name="app_name">8-Way Connections</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">username????</string>
    <string name="nav_header_subtitle">email????</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="nav_item_home">Home</string>
    <string name="nav_item_connections">Connections</string>
    <string name="nav_item_messages">Messages</string>
    <string name="nav_item_settings">Settings</string>
    <string name="nav_item_logout">Logout</string>
    <string name="action_settings">Settings</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="hint_email_or_username">Enter Email Address or Username</string>
    <string name="hint_email">Enter Email Address</string>
    <string name="hint_password1">Enter a password</string>
    <string name="hint_password2">Reenter the same password</string>
    <string name="hint_username">Enter a username (Optional)</string>
    <string name="hint_first_name">Enter your first name</string>
    <string name="hint_last_name">Enter your last name</string>
    <string name="hint_reset_code">Enter Reset Code</string>
    <string name="register_message">Please register for an account</string>
    <string name="welcome_message">Welcome!</string>
    <string name="chat_edit_hint">Write a message</string>
    <string name="action_logout">Logout</string>
    <string name="reset_password">Reset Password</string>
    <string name="submit">Submit</string>

    <string name="connections_search_hint">Enter a name, username, or email</string>
    <string name="connections_search_prompt">Find a user:</string>
    <string name="connections_return_button">Return</string>
    <string name="connections_invite_button">Send Invite</string>
    <string name="connections_accept_button">Accept</string>
    <string name="connections_decline_button">Decline</string>
    <string name="connections_refresh_button">Refresh</string>

    <!-- String used for settings -->
    <string name="change_username">Change Username</string>
    <string name="change_password">Change Password</string>
    <string name="change_theme">Change Theme</string>

    <!-- String used for Theme settings-->
    <string name="theme_default">Default</string>
    <string name="theme_dark">Dark</string>
    <string name="theme_fruit_salad">Fruit Salad</string>

    <!-- String used for Change Password-->
    <string name="change_password_old">Enter your old password</string>
    <string name="change_password_new">Enter your new password</string>
    <string name="change_password_confirm">Confirm your new password</string>
    <string name="change_password_success">Your password has been changed</string>

    <!-- String used for Change Username-->
    <string name="change_username_hint">Enter a new username</string>
    <string name="change_username_error">The username is either taken or invalid.</string>
    <string name="change_username_success">The username change was successful!</string>

    <string name="notify_check_email">Please check your email for a link to verify your address.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>

    <string name="default_notification_channel_id">fcm_default_channel</string>

    <string name="fcm_type_new_contact_request">new_contact_request</string>
    <string name="fcm_type_new_message">new_message</string>
</resources>
