<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/nav_group_top"
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_item_home"
            android:icon="@android:drawable/ic_menu_myplaces"
            android:title="@string/nav_item_home" />
        <item
            android:id="@+id/nav_item_connections"
            android:icon="@android:drawable/ic_menu_my_calendar"
            android:title="@string/nav_item_connections" />
        <item android:title="Item" />
        <item
            android:id="@+id/nav_item_messages"
            android:icon="@android:drawable/ic_menu_sort_by_size"
            android:title="@string/nav_item_messages" />
    </group>

    <group
        android:id="@+id/nav_group_bottom"
        android:checkableBehavior="none">

        <item
            android:id="@+id/nav_item_settings"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/nav_item_settings" />
        <item
            android:id="@+id/nav_item_logout"
            android:icon="@android:drawable/ic_lock_power_off"
            android:title="@string/nav_item_logout" />
    </group>

</menu>
