<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior"
    android:id="@+id/frameLayout3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".settings.ChangeThemeFragment">

    <Button
        android:id="@+id/theme_dark_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/dark_theme_border"
        android:text="@string/theme_dark"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/theme_default_button" />

    <Button
        android:id="@+id/theme_default_button"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/default_theme_border"
        android:text="@string/theme_default"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textColor="@color/not_quite_black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/theme_fruit_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/fruit_theme_border"
        android:text="@string/theme_fruit_salad"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textColor="@color/blackberry"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/theme_dark_button" />

</android.support.constraint.ConstraintLayout>